force-app/main/default/objects/Registration__c/fields/Expected_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Registration_Date__c</fullName>
    <label>Expected Registration Date</label>
    <type>Date</type>
</CustomField>