force-app/main/default/objects/Registration__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <label>Follow-Up Date</label>
    <type>DateTime</type>
</CustomField>