force-app/main/default/objects/Registration__c/fields/Is_9_9_AV_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_9_9_AV_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 9.9% AV Received</label>
    <type>Checkbox</type>
</CustomField>