force-app/main/default/objects/Registration__c/fields/Is_Loan_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Is_Loan_Sanctioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loan Sanctioned</label>
    <type>Checkbox</type>
</CustomField>