force-app/main/default/objects/Registration__c/fields/Last_Registration_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Registration_Call_Comment__c</fullName>
    <label>Last Registration Call Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>