force-app/main/default/objects/Registration__c/fields/Match_OCR_Amount_Before_Registration__c.field-meta.xml
<CustomField>
    <fullName>Match_OCR_Amount_Before_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match OCR Amount Before Registration</label>
    <type>Checkbox</type>
</CustomField>