force-app/main/default/objects/Registration__c/fields/Mode_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Funding__c</fullName>
    <label>Mode of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_of_Funding</valueSetName>
    </valueSet>
</CustomField>