force-app/main/default/objects/Registration__c/fields/Registration_Amount_Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount_Paid_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Amount Paid Status</label>
    <type>Checkbox</type>
</CustomField>