force-app/main/default/objects/Registration__c/fields/Registration_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Registration_Call_Count__c</fullName>
    <label>Registration Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>