force-app/main/default/objects/Registration__c/fields/Registration_Call_History__c.field-meta.xml
<CustomField>
    <fullName>Registration_Call_History__c</fullName>
    <label>Registration Call History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>