force-app/main/default/objects/Registration__c/fields/Registration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Stage__c</fullName>
    <label>Registration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Confirmed</fullName>
            </value>
            <value>
                <fullName>Registration Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>