force-app/main/default/objects/Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFS Draft submitted to Customer</fullName>
            </value>
            <value>
                <fullName>AFS Draft approved by Customer</fullName>
            </value>
            <value>
                <fullName>AFS Draft submitted to Legal</fullName>
            </value>
            <value>
                <fullName>AFS Draft approved by Legal</fullName>
            </value>
            <value>
                <fullName>AFS Draft submitted to Promoter</fullName>
            </value>
            <value>
                <fullName>AFS Draft signed by Promoter</fullName>
            </value>
            <value>
                <fullName>Registration Scheduled</fullName>
            </value>
            <value>
                <fullName>Registration Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>