force-app/main/default/objects/Registration__c/fields/SD_Paid__c.field-meta.xml
<CustomField>
    <fullName>SD_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SD Paid</label>
    <type>Checkbox</type>
</CustomField>