force-app/main/default/objects/Registration__c/fields/SDR_Amount__c.field-meta.xml
<CustomField>
    <fullName>SDR_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SDR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>