force-app/main/default/objects/Registration__c/fields/Stamp_Duty_Paid_by__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Paid_by__c</fullName>
    <label>Stamp Duty Paid by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>